@@ -1,0 +1,56 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<xliff version="1.0">
+	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2018-05-09T17:24:14Z" product-name="transactor">
+		<header/>
+		<body>
+			<trans-unit id="error_gateway_missing" xml:space="preserve" approved="yes">
+				<source>ERROR: Could not find gateway object for payment method '|'.</source>
+				<target>FEHLER: Es konnte kein Gateway Objeḱt für die Bezahlmethode '|' erzeugt werden.</target>
+			</trans-unit>
+			<trans-unit id="error_gateway_unknown" xml:space="preserve" approved="yes">
+				<source>ERROR: Unknown failure after Gateway processing!</source>
+				<target>FEHLER: Unbekannter Fehler nach der Bearbeitung durch den Gateway!</target>
+			</trans-unit>
+			<trans-unit id="error_no_template" xml:space="preserve" approved="yes">
+				<source>ERROR: The payment template file &quot;%s&quot; has not been found.</source>
+				<target>FEHLER: Die Bezahlung Template Datei &quot;%s&quot; wurde nicht gefunden.</target>
+			</trans-unit>
+			<trans-unit id="error_transaction_init" xml:space="preserve" approved="yes">
+				<source>ERROR: Could not initialize transaction.</source>
+				<target>FEHLER: Die Transaktion konnte nicht gestartet werden.</target>
+			</trans-unit>
+			<trans-unit id="error_reference_id" xml:space="preserve" approved="yes">
+				<source>ERROR: reference ID could not be generated.</source>
+				<target>FEHLER: Es konnte keine Referenz ID erzeugt werden.</target>
+			</trans-unit>
+			<trans-unit id="error_transaction_details" xml:space="preserve" approved="yes">
+				<source>ERROR: Setting details of transaction failed.</source>
+				<target>FEHLER: Das Setzen der Details der Transaktion ist fehlgeschlagen.</target>
+			</trans-unit>
+			<trans-unit id="error_transaction_no" xml:space="preserve" approved="yes">
+				<source>ERROR: No transaction has been executed.</source>
+				<target>FEHLER: Es ist keine Transaktion durchgeführt worden.</target>
+			</trans-unit>
+			<trans-unit id="error_relay_url" xml:space="preserve" approved="yes">
+				<source>ERROR: No relay URL given!</source>
+				<target>FEHLER: Es ist keine Weiterleitungs-URL angegeben worden!</target>
+			</trans-unit>
+			<trans-unit id="error_api_parameters" xml:space="preserve" approved="yes">
+				<source>ERROR: Wrong parameter in the call of the Transactor API.</source>
+				<target>FEHLER: Falscher Parameter beim Aufruf der Transactor API.</target>
+			</trans-unit>
+			<trans-unit id="error_invalid_data" xml:space="preserve" approved="yes">
+				<source>ERROR: invalid data.</source>
+				<target>FEHLER: ungültige Daten.</target>
+			</trans-unit>
+			<trans-unit id="m_default" xml:space="preserve" approved="yes">
+				<source>default</source>
+				<target>Standard</target>
+			</trans-unit>
+			<trans-unit id="m_ext" xml:space="preserve" approved="yes">
+				<source>extended</source>
+				<target>erweitert</target>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
