@@ -1,0 +1,44 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<xliff version="1.0">
+	<file source-language="en" datatype="plaintext" original="messages" date="2018-05-09T17:24:14Z" product-name="transactor">
+		<header/>
+		<body>
+			<trans-unit id="error_gateway_missing" xml:space="preserve">
+				<source>ERROR: Could not find gateway object for payment method '|'.</source>
+			</trans-unit>
+			<trans-unit id="error_gateway_unknown" xml:space="preserve">
+				<source>ERROR: Unknown failure after Gateway processing!</source>
+			</trans-unit>
+			<trans-unit id="error_no_template" xml:space="preserve">
+				<source>ERROR: The payment template file &quot;%s&quot; has not been found.</source>
+			</trans-unit>
+			<trans-unit id="error_transaction_init" xml:space="preserve">
+				<source>ERROR: Could not initialize transaction.</source>
+			</trans-unit>
+			<trans-unit id="error_reference_id" xml:space="preserve">
+				<source>ERROR: reference ID could not be generated.</source>
+			</trans-unit>
+			<trans-unit id="error_transaction_details" xml:space="preserve">
+				<source>ERROR: Setting details of transaction failed.</source>
+			</trans-unit>
+			<trans-unit id="error_transaction_no" xml:space="preserve">
+				<source>ERROR: No transaction has been executed.</source>
+			</trans-unit>
+			<trans-unit id="error_relay_url" xml:space="preserve">
+				<source>ERROR: No relay URL given!</source>
+			</trans-unit>
+			<trans-unit id="error_api_parameters" xml:space="preserve">
+				<source>ERROR: Wrong parameter in the call of the Transactor API.</source>
+			</trans-unit>
+			<trans-unit id="error_invalid_data" xml:space="preserve">
+				<source>ERROR: invalid data.</source>
+			</trans-unit>
+			<trans-unit id="m_default" xml:space="preserve">
+				<source>default</source>
+			</trans-unit>
+			<trans-unit id="m_ext" xml:space="preserve">
+				<source>extended</source>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
