@@ -1,42 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<description>texts for processing of the transactions</description>
-		<type>module</type>
-		<csh_table></csh_table>
-		<fileId>EXT:transactor/Resources/Private/Language/locallang.xml</fileId>
-		<labelContext type="array">
-		</labelContext>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="error_gateway_missing">ERROR: Could not find gateway object for payment method '|'.</label>
-			<label index="error_gateway_unknown">ERROR: Unknown failure after Gateway processing!</label>
-			<label index="error_no_template">ERROR: The payment template file "%s" has not been found.</label>
-			<label index="error_transaction_init">ERROR: Could not initialize transaction.</label>
-			<label index="error_reference_id">ERROR: reference ID could not be generated.</label>
-			<label index="error_transaction_details">ERROR: Setting details of transaction failed.</label>
-			<label index="error_transaction_no">ERROR: No transaction has been executed.</label>
-			<label index="error_relay_url">ERROR: No relay URL given!</label>
-			<label index="error_api_parameters">ERROR: Wrong parameter in the call of the Transactor API.</label>
-			<label index="error_invalid_data">ERROR: invalid data.</label>
-			<label index="m_default">default</label>
-			<label index="m_ext">extended</label>
-		</languageKey>
-		<languageKey index="de" type="array">
-			<label index="error_gateway_missing">FEHLER: Es konnte kein Gateway Objeḱt für die Bezahlmethode '|' erzeugt werden.</label>
-			<label index="error_gateway_unknown">FEHLER: Unbekannter Fehler nach der Bearbeitung durch den Gateway!</label>
-			<label index="error_no_template">FEHLER: Die Bezahlung Template Datei "%s" wurde nicht gefunden.</label>
-			<label index="error_transaction_init">FEHLER: Die Transaktion konnte nicht gestartet werden.</label>
-			<label index="error_reference_id">FEHLER: Es konnte keine Referenz ID erzeugt werden.</label>
-			<label index="error_transaction_details">FEHLER: Das Setzen der Details der Transaktion ist fehlgeschlagen.</label>
-			<label index="error_transaction_no">FEHLER: Es ist keine Transaktion durchgeführt worden.</label>
-			<label index="error_relay_url">FEHLER: Es ist keine Weiterleitungs-URL angegeben worden!</label>
-			<label index="error_gateway_missing">FEHLER: Es konnte kein Gateway Objeḱt für die Bezahlmethode '|' erzeugt werden.</label>
-			<label index="error_api_parameters">FEHLER: Falscher Parameter beim Aufruf der Transactor API.</label>
-			<label index="error_invalid_data">FEHLER: ungültige Daten.</label>
-			<label index="m_default">Standard</label>
-			<label index="m_ext">erweitert</label>
-		</languageKey>
-	</data>
-</T3locallang>
