@@ -1,35 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<T3locallang>
-	<meta type="array">
-		<description>texts for the markers</description>
-		<type>module</type>
-		<csh_table></csh_table>
-		<fileId>EXT:transactor/Resources/Private/Language/locallang_api.xml</fileId>
-		<labelContext type="array">
-		</labelContext>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="message_redirect">After completing the payment you need to return back to ###HOST### to complete the order.</label>
-			<label index="message_place_order">buy now</label>
-			<label index="message_credit_card">Credit card</label>
-			<label index="message_card_number">Card number</label>
-			<label index="message_card_holder">Card holder</label>
-			<label index="message_valid_until">Valid until (MM/YYYY)</label>
-			<label index="message_account_holder">Account holder</label>
-			<label index="message_account_number">Account number</label>
-			<label index="message_bank_code">Bank code</label>
-		</languageKey>
-		<languageKey index="de" type="array">
-			<label index="message_redirect">Nach abgeschlossener Bezahlung müssen Sie zu ###HOST### zurückkehren, um die Bestellung abzuschließen.</label>
-			<label index="message_place_order">bezahlen und kostenpflichtig bestellen</label>
-			<label index="message_credit_card">Kreditkarte</label>
-			<label index="message_card_number">Kartennummer</label>
-			<label index="message_card_holder">Karteninhaber</label>
-			<label index="message_valid_until">Gültig bis (MM/JJJJ)</label>
-			<label index="message_account_holder">Kontoinhaber</label>
-			<label index="message_account_number">Kontonummer</label>
-			<label index="message_bank_code">Bankleitzahl</label>
-		</languageKey>
-	</data>
-</T3locallang>
